objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <fields>
        <fullName>L2O_One_time_Total_Bookings_Total_USGH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>One time Total Bookings Total USGH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_P360_Model__c</fullName>
        <label>P360 Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard P360 (Network Option)</fullName>
                </value>
                <value>
                    <fullName>Virtual First Health Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_PG_Percentage__c</fullName>
        <description>Performance Guarantee Percentage of the Product. This value is used to calculate Net ARR with PG using pricerules</description>
        <label>PG Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product_Code__c</fullName>
        <description>Product code of the Parent Product related to this slide</description>
        <formula>IF(ISBLANK(SBQQ__RequiredBy__r.SBQQ__ProductCode__c), &apos;NULL&apos; , SBQQ__RequiredBy__r.SBQQ__ProductCode__c)</formula>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Participant_Quantity__c</fullName>
        <label>Participant Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Participation_Percentage__c</fullName>
        <description>This field is used to set the default Participant Percentage for Livongo Products. It gets used in PriceRule to calculate the Quantity.</description>
        <label>Participation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Payment_Term__c</fullName>
        <description>Time given to make a payment after an invoice is sent</description>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Payment_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Per_Unit_Discount__c</fullName>
        <description>Deal with USGH line items have the &quot;Per Unit Discount&quot; and not the OOB Add. Discount.
Per Unit Discount will only be Amount value and will basically be a dollar amount that can be deducted from List unit price</description>
        <label>Per Unit Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Percent_in_pricebook__c</fullName>
        <label>Discount in pricebook</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Pricing_Approval_Category__c</fullName>
        <description>Refer to a list of categories for HHS</description>
        <label>Pricing Approval Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Network &amp; Proactive</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Prior_Quantity__c</fullName>
        <formula>SBQQ__RenewedSubscription__r.SBQQ__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Product_End_Date__c</fullName>
        <description>Date Products need to be shipped back</description>
        <label>Product End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Family__c</fullName>
        <description>How you would categorize/group/organize this within Salesforce (whether it&apos;s a new or existing Product Family). Additionally, this field can be used during product selection to filter to the correct product or product SKU.</description>
        <label>L2O Product Family</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Portfolio__c</fullName>
        <description>Twin field from Product with value determining the product belongs to which portfolio.</description>
        <label>Product Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HHS</fullName>
                </value>
                <value>
                    <fullName>Complex Care</fullName>
                </value>
                <value>
                    <fullName>Specialty Care</fullName>
                </value>
                <value>
                    <fullName>Acute Care</fullName>
                </value>
                <value>
                    <fullName>Mental Health Care</fullName>
                </value>
                <value>
                    <fullName>Chronic Care</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Complex Care (EMS)</fullName>
                </value>
                <value>
                    <fullName>License Platform</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>INTL</fullName>
                </value>
                <value>
                    <fullName>Chronic Care Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Product_Start_Date__c</fullName>
        <description>Numerical value to show when the Products are active</description>
        <label>Product Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Status__c</fullName>
        <description>To capture the order product status from Subscription/Asset.</description>
        <label>Product Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Term_Years__c</fullName>
        <description>Numerical value to show length of term</description>
        <label>Product Term (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Quantity__c</fullName>
        <description>Used to calculate Solo setup and Configuration Qty inside SSB bundle</description>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Region__c</fullName>
        <description>Location of Business</description>
        <label>Region</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Renewal_Price__c</fullName>
        <description>To capture the renewed subscription&apos;s net price for custom script for contract action.</description>
        <formula>SBQQ__RenewedSubscription__r.SBQQ__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_ReplacementQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the new Quote that gets created as part of the replace process</description>
        <label>Replacement Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Lines (Quote Line)</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Risk_Fee__c</fullName>
        <description>Enter fee if there are any risks</description>
        <label>Risk Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Type__c</fullName>
        <description>Used to capture Sales Type which will be used to decide Subscription Type</description>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Connected Care Bundle-Purchase</fullName>
                </value>
                <value>
                    <fullName>Connected Care Bundle-Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Service_Platform_Type__c</fullName>
        <description>To categorize the Order by types. It can either be HHS / USGH.</description>
        <formula>IF(ISPICKVAL(L2O_Service_Platform__c,&apos;HHS&apos;),&apos;HHS&apos;,&apos;USGH&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Platform Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Service_Platform__c</fullName>
        <description>Platform of service</description>
        <label>Service Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HHS</fullName>
                </value>
                <value>
                    <fullName>LIV</fullName>
                </value>
                <value>
                    <fullName>TDH</fullName>
                </value>
                <value>
                    <fullName>INTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_ShippedDate__c</fullName>
        <description>Date Products on the Quote will be shipped</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_ShippingCity__c</fullName>
        <description>City for Shipping Address</description>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_ShippingCountry__c</fullName>
        <description>Country for Shipping Address</description>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_ShippingName__c</fullName>
        <description>Contact shipment should be addressed to.</description>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_ShippingPostalCode__c</fullName>
        <description>Postal code for Shipping Address</description>
        <label>Ship To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_ShippingState__c</fullName>
        <description>State for Shipping Address</description>
        <label>Ship To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_ShippingStreet__c</fullName>
        <description>Street for Shipping Address</description>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_SoloPriorQty__c</fullName>
        <description>To capture the original prior qty of the &quot;solo&quot; QLI from New Business transaction</description>
        <label>Solo Prior Qty</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Solo_Setup_and_Configuration_QTY_SSB__c</fullName>
        <description>Formula to check SOLO setup and configuration on SSB Product bundle</description>
        <formula>IF(SBQQ__RequiredBy__r.SBQQ__ProductCode__c = &apos;SS-PB&apos;  &amp;&amp; SBQQ__PriorQuantity__c  &lt;&gt; 0  &amp;&amp; (SBQQ__ProductCode__c = &apos;SW-20352&apos; || SBQQ__ProductCode__c = &apos;SW-20377&apos; || SBQQ__ProductCode__c = &apos;SW-20351&apos;) ,
 true,
 false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solo Setup and Configuration QTY SSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Solution_Type_Group__c</fullName>
        <description>Identifies the type of solutions needed for HHS.</description>
        <label>Solution Type Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Imaging Solutions</fullName>
                </value>
                <value>
                    <fullName>Solo Solutions</fullName>
                </value>
                <value>
                    <fullName>Vici Solutions</fullName>
                </value>
                <value>
                    <fullName>Viewpoint Solutions</fullName>
                </value>
                <value>
                    <fullName>Lite Solutions</fullName>
                </value>
                <value>
                    <fullName>Care Console Solutions</fullName>
                </value>
                <value>
                    <fullName>TV &amp; TV Pro Solutions</fullName>
                </value>
                <value>
                    <fullName>microPC Solutions</fullName>
                </value>
                <value>
                    <fullName>Mini Solutions</fullName>
                </value>
                <value>
                    <fullName>Software &amp; User Licenses</fullName>
                </value>
                <value>
                    <fullName>Consumer Module</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Network &amp; Proactive Monitoring</fullName>
                </value>
                <value>
                    <fullName>Accessories / Ancillary</fullName>
                </value>
                <value>
                    <fullName>REACH, Quick Connect, Connect</fullName>
                </value>
                <value>
                    <fullName>Setup &amp; Configuration</fullName>
                </value>
                <value>
                    <fullName>Kiosk &amp; Console, Care Console Solutions</fullName>
                </value>
                <value>
                    <fullName>Shipping &amp; Handling</fullName>
                </value>
                <value>
                    <fullName>Physician Services</fullName>
                </value>
                <value>
                    <fullName>Vantage Solutions</fullName>
                </value>
                <value>
                    <fullName>Vita Solutions</fullName>
                </value>
                <value>
                    <fullName>Xpress Solutions</fullName>
                </value>
                <value>
                    <fullName>Connected Care Solutions</fullName>
                </value>
                <value>
                    <fullName>Xpress, Vita, Vantage Solutions</fullName>
                    <isActive>false</isActive>
                    <label>Xpress, Vita, Vantage Solutions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Term_Calculation__c</fullName>
        <formula>((YEAR(SBQQ__EffectiveEndDate__c) - YEAR(SBQQ__EffectiveStartDate__c)) * 12) + (MONTH(SBQQ__EffectiveEndDate__c) - MONTH(SBQQ__EffectiveStartDate__c) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Total_Visits__c</fullName>
        <description>Value applied via Price Rules.</description>
        <label>% Total Visits</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_USD_Price__c</fullName>
        <label>USD Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_USGH_and_International__c</fullName>
        <formula>IF(

(((TEXT(L2O_Service_Platform__c) == &apos;LIV&apos; || TEXT(L2O_Service_Platform__c) == &apos;TDH&apos;) &amp;&amp;  TEXT(L2O_Business_Region_rev__c) ==&apos;USA&apos;
) || TEXT(L2O_Business_Region_rev__c) !=&apos;USA&apos;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USGH and International?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Unit_Of_Measure__c</fullName>
        <description>Used to capture unit of measure of Quote Line record</description>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Per Unit Per Month</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Up_Front_Fee_Default__c</fullName>
        <label>Up Front Fee Default</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Up_Front_Fee_Total__c</fullName>
        <description>Total amount of fee that have to be paid upfront</description>
        <label>Up Front Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Up_Front_Fee__c</fullName>
        <description>Fees that have to be paid upfront</description>
        <label>Up Front Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Upfront_Fee_Total_BookingsTotal_USGH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Upfront Fee Total Bookings Total USGH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Use_Actual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To ignore the prevalence rate calculation in the following Price Rule USGH - Livongo Default Quantity - PPPM (176853)</description>
        <label>Use Actual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Utilization_Assumption__c</fullName>
        <label>Utilization Assumption</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_VFO_Indicator__c</fullName>
        <formula>IF(AND(ISPICKVAL(L2O_Service_Platform__c,&apos;LIV&apos;), OR(AND(SBQQ__UpgradedSubscription__c = null, SBQQ__RenewedSubscription__c = null), SBQQ__ProductCode__c = &apos;CCC&apos;, SBQQ__ProductCode__c = &apos;CCCPB&apos;, SBQQ__ProductCode__c = &apos;CCCMSC&apos;), ISPICKVAL(L2O_Fee_Type__c, &apos;PPPM&apos;)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VFO Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Version__c</fullName>
        <description>Which version of the Products are being used?</description>
        <label>Product Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Total_Rollup__c</fullName>
        <label>List Total Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_ARR_QLI__c</fullName>
        <formula>IF(AND(AND(L2O_Business_Region__c != &apos;USA&apos;, L2O_Business_Region__c != &apos;Canada&apos;), NOT(ISPICKVAL(SBQQ__SubscriptionPricing__c, &quot;&quot;))),
SBQQ__EffectiveQuantity__c * SBQQ__UnitCost__c * 12,

IF(AND(OR(SBQQ__ProductCode__c = &apos;MYSTR3&apos;, SBQQ__ProductCode__c = &apos;MSDIGIT&apos;), ISPICKVAL(L2O_Fee_Type__c, &quot;PPPM&quot;), NOT(ISPICKVAL(SBQQ__SubscriptionPricing__c, &quot;&quot;)),NOT(ISPICKVAL(L2O_Contract_Action__c, &quot;Cancel&quot;))),
SBQQ__EffectiveQuantity__c * ((IF(ISBLANK(L2O_Membership_Fee__c), SBQQ__ListPrice__c, L2O_Membership_Fee__c) -
(IF(ISBLANK(L2O_At_Risk_PPPM__c), 0, L2O_At_Risk_PPPM__c) +
IF(ISBLANK(L2O_Admin_Fee__c), 0, L2O_Admin_Fee__c))) * 6),

IF(AND(NOT(ISPICKVAL(SBQQ__SubscriptionPricing__c, &quot;&quot;)),NOT(ISPICKVAL(L2O_Contract_Action__c, &quot;Cancel&quot;))),
SBQQ__EffectiveQuantity__c * ((IF(ISBLANK(L2O_Membership_Fee__c), SBQQ__ListPrice__c, L2O_Membership_Fee__c) -
(IF(ISBLANK(L2O_At_Risk_PPPM__c), 0, L2O_At_Risk_PPPM__c) +
IF(ISBLANK(L2O_Admin_Fee__c), 0, L2O_Admin_Fee__c) )) * 12), 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_ARR_With_PG__c</fullName>
        <description>Net ARR based on the Product Performance Guarantee percentage. This value is calculated in the Price rule</description>
        <label>Net ARR With PG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Month_Bundle__c</fullName>
        <label>Per Month Bundle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Month_Calc__c</fullName>
        <formula>Per_Month_Rollup_Sum__c + Per_Month_Bundle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Month Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Month_Price__c</fullName>
        <formula>IF(QuoteSec__c =&apos;One Time Fees&apos;,SBQQ__NetPrice__c,SBQQ__NetPrice__c/SBQQ__EffectiveSubscriptionTerm__c)</formula>
        <label>Per Month Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Month_Rollup_Sum__c</fullName>
        <formula>Per_Month_Price__c + List_Total_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Month Rollup Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name_and_Code__c</fullName>
        <formula>SBQQ__Product__r.Name&amp;&quot; / &quot;&amp;SBQQ__Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name and Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteDiscountDisplay__c</fullName>
        <formula>IF(SBQQ__AdditionalDiscountAmount__c&gt;0, Quote_Currency__c+&apos; &apos;+TEXT(SBQQ__AdditionalDiscountAmount__c),IF( SBQQ__Discount__c&gt;0,TEXT(SBQQ__Discount__c*100)+&apos;%&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteDiscountDisplay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteSec__c</fullName>
        <formula>IF(Equipment__c,&apos;Equipment&apos;, IF(AND(SBQQ__Bundle__c,TEXT(L2O_Sales_Type__c )==&apos;Lease&apos;, SBQQ__Quote__r.CCB_Product_Count__c==0,Text(L2O_Service_Platform__c)=&apos;HHS&apos;, Total_Rollup_Numeric__c&gt;0 ),&apos;Leased Solution&apos;, IF(OR(AND(RollupCheck__c, SBQQ__Quote__r.CCB_Product_Count__c ==0, Text(SBQQ__Quote__r.L2O_Sales_Type__c) ==&apos;Lease&apos;),AND(CCB_Lease_Rollup_Check__c, SBQQ__Quote__r.CCB_Product_Count__c &gt;0, Text(SBQQ__Quote__r.L2O_Sales_Type__c) ==&apos;Lease&apos;) , AND(CCB_Purchase_Rollup_Check__c, SBQQ__Quote__r.CCB_Product_Count__c&gt;0, Text(SBQQ__Quote__r.L2O_Sales_Type__c) ==&apos;Purchase&apos;)),SBQQ__RequiredBy__r.Bundle_Quote_Section__c, IF(AND(OR(ISPICKVAL(SBQQ__SubscriptionPricing__c,&apos;Fixed Price&apos;),(ISPICKVAL(SBQQ__SubscriptionPricing__c,&apos;Percent Of Total&apos;))),Text(L2O_Service_Platform__c)=&apos;HHS&apos;), &apos;Subscription Fees&apos;, IF(AND(ISPICKVAL(SBQQ__SubscriptionPricing__c,&apos;&apos;),Text(L2O_Service_Platform__c)=&apos;HHS&apos;),&apos;One Time Fees&apos;,null) ) )) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteSec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Currency__c</fullName>
        <formula>TEXT(SBQQ__Quote__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Line ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollupCheck__c</fullName>
        <formula>SBQQ__ProductOption__r.Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RollupCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional customer discount extended on this line item in terms of absolute amount.</description>
        <inlineHelpText>Additional customer discount extended on this line item in the form of an absolute amount.</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscount__c</fullName>
        <description>Total additional discount extends on this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</description>
        <formula>(SBQQ__RegularPrice__c - SBQQ__CustomerPrice__c) *  SBQQ__EffectiveQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total additional discounts extended to this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</inlineHelpText>
        <label>Additional Disc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalQuantity__c</fullName>
        <description>Additional quantity for this product which contributes to volume discount calculations.</description>
        <inlineHelpText>Additional quantity for this product that contributes to volume discount calculations</inlineHelpText>
        <label>Additional Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AllowAssetRefund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the underlying asset may have its quantity refunded. Only relevant for Amendments.</description>
        <inlineHelpText>Indicates whether the asset represented by this line may be refunded.</inlineHelpText>
        <label>Allow Asset Refunds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>For products sold in batches quantity in each batch. Defaulted from the product record.</description>
        <inlineHelpText>If products are sold in batches, this stores the quantity in each batch, defaulted from the product.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign a fixed price to a product based on quantity and quantity range. This overrides the automatic calculation of quantity * unit price.</description>
        <inlineHelpText>Assign a fixed price to a product based on quantity and quantity range. This overrides the automatic calculation of quantity * unit price.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CarryoverLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes this line as an auto-mapped option on an Upgraded Bundle.</description>
        <inlineHelpText>Denotes this line as an auto-selected option of an upgrade bundle.</inlineHelpText>
        <label>Carry-Over Line</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>